--- a/static/css/cc.css
+++ b/static/css/cc.css
@@ -34,7 +34,7 @@
 
 body{
     font-family: 'Lato'; 
-    background-color: #AF2440;
+    background-color: #001F3D;
 }
 .vh-100{
     height:100vh;
@@ -235,7 +235,7 @@ div ::-webkit-scrollbar-thumb {
 }
 
 .bg-color-main{
-    background-color: #AF2440;
+    background-color: #001F3D;
 }
 
 .logo{
@@ -293,8 +293,8 @@ div ::-webkit-scrollbar-thumb {
 }
 
 .dropdown-item{
-    background-color: #962037;
-    color: #FFF;
+    background-color: #f8f8f8;
+    color: #001F3D;
 }
 
 .dropdown-menu{
@@ -311,7 +311,6 @@ div ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #FFFFFF;
     box-shadow: none!important;
-    height: 120px;
 }
 
 .card-farmers{
@@ -360,7 +359,7 @@ div ::-webkit-scrollbar-thumb {
 }
 
 .nav-link:hover{
-    color: #000
+    color: #ba4e63
 }
 
 .indicator-title{
@@ -373,8 +372,42 @@ div ::-webkit-scrollbar-thumb {
     margin-top: 1%;
 }
 
-.filter-section{
-    height: 50px;
+
+
+.week-heading{
+    font-size: 22px;
 }
+
+.grey-bg{
+    background-color: #f8f8f8;
+}
+
+.red-text{
+    color:#ba4e63
+}
+
+.margin-visual{
+    margin-left: 4%;
+}
+
+.margin-visual-top{
+    margin-top: 12%;
+}
+
+.scheduler-filters{
+    float: right;
+    margin-top: 2%;
+     
+}
+
+.red-bg{
+    background-color: #ba4e63;
+    color: #fff;
+}
+
+.active{
+    border-bottom: 2px solid #fff;
+}
+
 
 
